...
          ToolbarItem(placement: .topBarLeading) {
            Button {
              setSidebar(true)
            } label: {
              Image(systemName: "line.3.horizontal")
            }
            .accessibilityIdentifier("chat.menu")
          }
        }
    }

  }

...
